--- a/package.json
+++ b/package.json
@@ -2,12 +2,6 @@
   "name": "filefile",
   "version": "1.0.0",
   "description": "Create a handy list of redundantly-named file-files",
-  "bin": {
-    "filefile": "filefile.js"
-  },
-  "directories": {
-    "lib": "lib"
-  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -20,5 +14,6 @@
   "bugs": {
     "url": "https://github.com/Raindeer44/filefile/issues"
   },
-  "homepage": "https://github.com/Raindeer44/filefile#readme"
+  "homepage": "https://github.com/Raindeer44/filefile#readme",
+  "main": "index.js"
 }
